gke/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  labels:
    app: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        image: gcr.io/[YOUR_PROJECT]/demo-repo:gke1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
